--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 layout: blog
 title: Welcome
-description: >
-  The official Hydejack blog. Version updates, example content and how-to guides on how to blog with Jekyll.
-last_modified_at: 2018-08-03
+description: Mizzlr's Tech Blog
 no_link_title: false
 no_excerpt: false
 hide_image: false
