--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: blog
-title: Welcome
-description: Mizzlr's Tech Blog
+title: Welcome to Mizzlr's Tech Blog
+description: Welcome to Mizzlr's Tech Blog
 no_link_title: false
 no_excerpt: false
 hide_image: false
